--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style = 'background-color: black; color:white'>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
